--- a/ukol5.ipynb
+++ b/ukol5.ipynb
@@ -9,9 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Funkce 1\n",
+      "x=0.5675322824258833, cas:0.009684562683105469s\n",
+      "x=0.5671432836257685, cas:0.0010347366333007812s\n",
+      "Funkce 2\n",
+      "x=1.8951017515189241, cas:0.0s\n",
+      "x=1.8954942700829887, cas:0.0s\n",
+      "Funkce 3\n",
+      "x=0.5671555554039427, cas:0.0009980201721191406s\n",
+      "x=0.567143290364994, cas:0s\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -86,7 +102,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.0"
   }
  },
