--- a/ukol8.ipynb
+++ b/ukol8.ipynb
@@ -9,36 +9,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Přední derivace:  0.5402980985058647\n",
-      "Zadní derivace:  0.540306513208133\n",
-      "Centrální derivace:  0.5403023058569989\n",
+      "Přední derivace:  0.5398814803603269\n",
+      "Zadní derivace:  0.5407229512750522\n",
+      "Centrální derivace:  0.5403022158176896\n",
+      "Čas:  0.0 s\n",
       "\n",
-      "Chyba centralni derivace:  1.2499921875130937e-05\n",
-      "Chyba centralni derivace:  3.1249951172318546e-06\n",
-      "Chyba centralni derivace:  7.812496948256253e-07\n"
+      "Chyba centralni adaptibilní derivace:  1.2499921875130937e-05\n",
+      "Chyba centralni adaptibilní derivace:  3.1249951172318546e-06\n",
+      "Chyba centralni adaptibilní derivace:  7.812496948256253e-07\n",
+      "Výsledek centrální adaptibilní derivace: [0.99999896]\n",
+      "Čas:  0.0 s\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import time\n",
     "\n",
     "f = lambda x: np.sin(x) #funkce sin(x)\n",
     "\n",
-    "def forward_derivative(f, x, h): #vzorec pro přední derivaci\n",
+    "def predni_derivace(f, x, h): #vzorec pro přední derivaci\n",
     "    return (f(x + h) - f(x)) / h\n",
     "\n",
-    "def backward_derivative(f, x, h): #vzorec pro zadní derivaci\n",
+    "def zadni_derivace(f, x, h): #vzorec pro zadní derivaci\n",
     "    return (f(x) - f(x - h)) / h\n",
     "\n",
-    "def central_derivative(f, x, h): #vzorec pro centrální derivaci\n",
+    "def centralni_derivace(f, x, h): #vzorec pro centrální derivaci\n",
     "    return (f(x + h) - f(x - h)) / (2 * h)\n",
     "\n",
     "# Derivace s adaptabilním krokem\n",
@@ -49,23 +52,29 @@
     "        df1 = (f(x + h) - f(x - h)) / (2 * h)  #centralni derivace\n",
     "        df2 = (f(x + h/2) - f(x - h/2)) / h  # Poloviční krok\n",
     "        error = np.abs(df2 - df1)  # Odhad chyby\n",
-    "        print(\"Chyba centralni derivace: \",error) #výpis chyby\n",
+    "        print(\"Chyba centralni adaptibilní derivace: \",error) #výpis chyby\n",
     "        h /= 2  # Snižování kroku pro vyšší přesnost\n",
     "    return df1 #vrácení derivace\n",
     "\n",
     "# Nastavení hodnot\n",
     "x0 = 1 #hodnota x\n",
-    "krok = 1e-5  # krok\n",
+    "krok = 1e-3  # krok\n",
     "tolerance = 1e-6  #tolerance pro adaptabilní krok\n",
     "\n",
     "# Výpočty\n",
-    "print(\"Přední derivace: \",forward_derivative(f, x0, krok))\n",
-    "print(\"Zadní derivace: \",backward_derivative(f, x0, krok))\n",
-    "print(\"Centrální derivace: \",central_derivative(f, x0, krok))\n",
+    "print(\"Přední derivace: \",predni_derivace(f, x0, krok))\n",
+    "print(\"Zadní derivace: \",zadni_derivace(f, x0, krok))\n",
+    "start_time = time.time()\n",
+    "print(\"Centrální derivace: \",centralni_derivace(f, x0, krok))\n",
+    "end_time = time.time()-start_time\n",
+    "print(\"Čas: \",end_time,\"s\")\n",
     "print()\n",
     "x0 = np.linspace(0, 10, 1) # pro hodnoty 1 až 10\n",
+    "start_time = time.time()\n",
     "adaptivni_derivace = np.array([adaptive_derivative(f, x, initial_h=1e-2, tolerance=tolerance) for x in x0])\n",
-    "print('Výsledek centrální adaptibilní derivace:',adaptivni_derivace)\n"
+    "end_time = time.time()-start_time\n",
+    "print('Výsledek centrální adaptibilní derivace:',adaptivni_derivace)\n",
+    "print(\"Čas: \",end_time,\"s\")\n"
    ]
   }
  ],
